--- a/source_sass/_variables.scss
+++ b/source_sass/_variables.scss
@@ -1,7 +1,4 @@
-$orange         : #BD3613;
-$blue           : #2176C7;
-
-$font-primary: Merriweather, serif;
-$font-secondary: Bree Serif, serif;
-
-$default-border-radius : 10px;
+$blue           : rgb(0,0,128);
+$saffron		: rgb(255,153,51);
+$green			: rgb(19,136,8);
+$black			: rgb(0, 0, 0);
