--- a/source_sass/_mixins.scss
+++ b/source_sass/_mixins.scss
@@ -27,3 +27,10 @@
 	transition-property: font-size;
     transition-duration: .5s;
 }
+
+@mixin icons(){
+	width: 5%;
+	display: inline-block;
+	text-align: center;
+	margin-top: 25%;
+}
