--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -12,16 +12,17 @@
 }
 
 * {
-	margin :0;
+	margin :0 auto;
 	padding: 0;
 	box-sizing: border-box;
 	border-style: solid;
 	height:100%;
-	width: 100%;
+	max-width: 100%;
 }
 
 nav {
 	width:100%;
+	margin: 0 auto;
 	position:fixed; 
 	background-color: $black;
 	display: inline-block;
